--- a/data/lite/index.htm
+++ b/data/lite/index.htm
@@ -1643,7 +1643,7 @@
 
                     <div class="btn-group">
                         <button type="button" class="btn" onclick="saveSettings()">Save Settings</button>
-                        <button type="button" class="btn btn-secondary" onclick="testCancel()">Test Cancel</button>
+                        <button type="button" class="btn btn-secondary" onclick="testCancel()">Send Pause Command</button>
                     </div>
                 `;
             } catch (error) {
