--- a/webui_lite/index.html
+++ b/webui_lite/index.html
@@ -2116,7 +2116,7 @@
         }
 
         /**
-         * Add new log entries to the accumulator, deduplicating and maintaining order
+         * Add new log entries to the accumulator, deduplicating by full line content
          * @param {string[]} newLines - Array of log lines from the server
          * @returns {number} Number of new unique entries added
          */
@@ -2127,7 +2127,7 @@
                 const trimmed = line.trim();
                 if (trimmed.length === 0) continue;
 
-                // Skip if already seen
+                // Deduplicate by full line content
                 if (logAccumulator.seen.has(trimmed)) continue;
 
                 // Add to accumulator
@@ -2192,8 +2192,8 @@
                 const response = await fetch('/api/logs_live');
                 const text = await response.text();
 
-                // Split by newlines and filter empty lines
-                const logs = text.split('\n').filter(line => line.trim().length > 0);
+                // Split by newlines (handle both \n and \r\n) and filter empty lines
+                const logs = text.split(/\r?\n/).filter(line => line.trim().length > 0);
 
                 // Accumulate new entries into browser-side storage
                 accumulateLogs(logs);
