restore reset button

--- a/webui_lite/index.html
+++ b/webui_lite/index.html
@@ -1182,6 +1182,16 @@
                     <span class="info-label">IP Address</span>
                     <span class="info-value" id="ipAddress">Loading...</span>
                 </div>
+                <div style="margin-top: 32px; padding-top: 20px; border-top: 1px solid var(--border-color);">
+                    <h3 style="color: var(--accent-primary); margin-bottom: 16px;">Device Actions</h3>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-secondary" onclick="resetDevice()"> Restart
+                            Device</button>
+                    </div>
+                    <p class="form-help" style="margin-top: 12px;">
+                        Restarts the ESP32. Connection will be lost temporarily.
+                    </p>
+                </div>
             </div>
         </div>
     </main>
