--- a/webui_lite/index.html
+++ b/webui_lite/index.html
@@ -1129,7 +1129,7 @@
                     <div class="upload-icon">📦</div>
                     <h3>Drop firmware.bin and/or littlefs.bin</h3>
                     <p style="color: var(--text-secondary); margin-top: 10px;">
-                        Files are uploaded sequentially. Firmware uploads reboot automatically.
+                        Up to 2 files; no merged builds; max 4 MB each. Firmware uploads reboot automatically.
                     </p>
                     <input type="file" id="firmwareFile" accept=".bin" multiple style="display: none;">
                 </div>
